# py2dist

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
py2dist/: __init__.py  cli.py  compiler.py  template.py
pyprotector/: compiler.py
