[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py2dist"
version = "0.1.2"
description = "Compile Python code to binary for distribution"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{ name = "xxnuo" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: Stackless",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = ["Cython", "setuptools"]

[project.urls]
Homepage = "https://github.com/xxnuo/py2dist"
"Source Code" = "https://github.com/xxnuo/py2dist"
"Bug Tracker" = "https://github.com/xxnuo/py2dist/issues"

[project.scripts]
py2dist = "py2dist.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["py2dist"]

[tool.hatch.build.targets.sdist]
include = ["py2dist", "README.md", "README_zh.md", "LICENSE", "pyproject.toml"]
exclude = [
    "tests",
    "scripts",
    ".github",
    "**/.gitignore",
    ".gitattributes",
    "Makefile",
    "uv.lock",
    ".python-version",
]
